<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.datn</groupId>
    <artifactId>shop</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>shop</name>
    <description>Shop Multi-module Project</description>

    <properties>
        <java.version>17</java.version>
        <spring-boot.version>3.3.1</spring-boot.version>
        <spring-cloud.version>2023.0.2</spring-cloud.version>
        <jjwt.version>0.11.5</jjwt.version>
        <springdoc.version>2.5.0</springdoc.version>
        <lombok.version>1.18.30</lombok.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <ojdbc.version>21.9.0.0</ojdbc.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- Dependency Management -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot Dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud Dependencies -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc11</artifactId>
                <version>${ojdbc.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-database</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-object</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-product</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-cart</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-order</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-inventory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-shipping</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-payment</artifactId>
                <version>${project.version}</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>com.datn</groupId>-->
<!--                <artifactId>shop-notification</artifactId>-->
<!--                <version>${project.version}</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>com.datn</groupId>
                <artifactId>shop-client</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>shop-database</module>
        <module>shop-object</module>
        <module>shop-auth</module>
        <module>shop-user</module>
        <module>shop-product</module>
        <module>shop-cart</module>
        <module>shop-order</module>
        <module>shop-inventory</module>
        <module>shop-shipping</module>
        <module>shop-payment</module>
<!--        <module>shop-notification</module>-->
        <module>shop-client</module>
        <module>shop-admin</module>
        <module>shop-app</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <!-- MapStruct processor -->
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>